--- a/docker/postgresql.conf
+++ b/docker/postgresql.conf
@@ -2,6 +2,10 @@ listen_addresses='*'
 max_connections=80
 random_page_cost=1.1
 effective_io_concurrency=50
+shared_buffers=75MB
+work_mem=8MB
+
+# LOGS CONFIG
 log_statement='none'
 log_duration=off
 log_lock_waits=off
