--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -7,7 +7,8 @@ services:
     hostname: api1
     container_name: api1-rb
     depends_on:
-      - postgres
+      postgres:
+        condition: service_healthy
     network_mode: host
     env_file:
       - .env
@@ -18,6 +19,12 @@ services:
         limits:
           cpus: "1"
           memory: "500MB"
+    healthcheck:
+      test: ["CMD-SHELL", "true"]
+      start_interval: 3s
+      retries: 1
+      interval: 5s
+      timeout: 2s
 
   api2:
     <<: *api
@@ -32,8 +39,10 @@ services:
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
     depends_on:
-      - api1
-      - api2
+      api1:
+        condition: service_healthy
+      api2:
+        condition: service_healthy
     network_mode: host
     deploy:
       resources:
@@ -62,6 +71,13 @@ services:
         limits:
           cpus: "0.50"
           memory: "300MB"
+
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U rinha -d rinhadb -h localhost -p 5432"]
+      start_interval: 25s
+      retries: 3
+      interval: 45s
+      timeout: 2s
 
 volumes:
   postgres-data:
