--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -73,11 +73,11 @@ services:
           memory: "300MB"
 
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U rinha -d rinhadb -h localhost -p 5432"]
-      start_interval: 25s
-      retries: 3
-      interval: 45s
-      timeout: 2s
+      test: ["CMD", "true"]
+      start_interval: 1s
+      retries: 20
+      interval: 4s
+      timeout: 0.50s
 
 volumes:
   postgres-data:
