--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -20,10 +20,10 @@ services:
           cpus: "1"
           memory: "500MB"
     healthcheck:
-      test: ["CMD-SHELL", "true"]
+      test: ["CMD-SHELL", "wget -q --spider http://localhost:8080/clientes/1/extrato || exit 1"]
       start_interval: 3s
-      retries: 1
-      interval: 5s
+      retries: 10
+      interval: 2s
       timeout: 2s
 
   api2:
@@ -32,6 +32,13 @@ services:
     container_name: api2-rb
     environment:
       SERVER_PORT: 8081
+
+    healthcheck:
+      test: ["CMD-SHELL", "wget -q --spider http://localhost:8081/clientes/1/extrato || exit 1"]
+      start_interval: 3s
+      retries: 10
+      interval: 2s
+      timeout: 2s
 
   nginx:
     image: nginx:alpine
@@ -73,10 +80,10 @@ services:
           memory: "300MB"
 
     healthcheck:
-      test: ["CMD", "true"]
+      test: ["CMD-SHELL", "pg_isready -U rinha -d rinhadb -h localhost -p 5432"]
       start_interval: 1s
-      retries: 20
-      interval: 4s
+      retries: 10
+      interval: 0.50s
       timeout: 0.50s
 
 volumes:
