--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -20,7 +20,7 @@ services:
           cpus: "1"
           memory: "500MB"
     healthcheck:
-      test: ["CMD-SHELL", "wget -q --spider http://localhost:8080/clientes/1/extrato || exit 1"]
+      test: ["CMD-SHELL", "curl -f http://localhost:8080/clientes/1/extrato || exit 1"]
       start_interval: 3s
       retries: 10
       interval: 2s
@@ -34,7 +34,7 @@ services:
       SERVER_PORT: 8081
 
     healthcheck:
-      test: ["CMD-SHELL", "wget -q --spider http://localhost:8081/clientes/1/extrato || exit 1"]
+      test: ["CMD-SHELL", "curl -f http://localhost:8081/clientes/1/extrato || exit 1"]
       start_interval: 3s
       retries: 10
       interval: 2s
