--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -17,7 +17,7 @@ services:
     deploy:
       resources:
         limits:
-          cpus: "1"
+          cpus: "0.50"
           memory: "500MB"
     healthcheck:
       test: ["CMD-SHELL", "curl -f http://localhost:8080/clientes/1/extrato || exit 1"]
@@ -54,8 +54,8 @@ services:
     deploy:
       resources:
         limits:
-          cpus: "0.20"
-          memory: "50MB"
+          cpus: "0.10"
+          memory: "90MB"
 
   postgres:
     image: postgres:16.2
@@ -76,7 +76,7 @@ services:
     deploy:
       resources:
         limits:
-          cpus: "0.50"
+          cpus: "0.40"
           memory: "300MB"
 
     healthcheck:
@@ -85,6 +85,11 @@ services:
       retries: 10
       interval: 0.50s
       timeout: 0.50s
+
+    ulimits:
+      nofile:
+        soft: 65535
+        hard: 65535
 
 volumes:
   postgres-data:
