CI: improving dockerfile and CI file github actions

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,10 +1,26 @@
+# SETUP NATIVE BINARY
 FROM ghcr.io/graalvm/native-image-community:21 AS build
 WORKDIR /app
 COPY ./app /app
-RUN DB_URL=r2dbc:postgresql://localhost:5432/rinhadb DB_USER=rinha DB_PASS=rinha DB_POOL=40 ./mvnw -Pnative native:compile
+RUN DB_PASS="$DB_PASS" DB_URL="$DB_URL" DB_USER="$DB_USER" \
+    ./mvnw -Pnative native:compile
 
+# EXECUTE API
 FROM alpine:3.19.1
-COPY --from=build /app/target/rinhav2 /rinhav2
-RUN apk --no-cache add libc6-compat
-EXPOSE 8080
-CMD ["./rinhav2"]
+
+ENV APP_HOME=/home/app/api
+
+RUN addgroup -g 1001 app && adduser --disabled-password -G app -u 1000 app && \
+    mkdir -p "$APP_HOME" && \
+    chown -R app:app "$APP_HOME" \
+    apk --no-cache add libc6-compat
+
+COPY --from=build /app/target/rinhav2 "$APP_HOME"/rinhav2
+
+EXPOSE ${SERVER_PORT:-8080}
+
+USER app
+
+WORKDIR "$APP_HOME"
+
+ENTRYPOINT ["./rinhav2"]
